# python_games

./: Makefile  README.md  README_C.md  casse_briques.py  check_dependencies.sh  game_menu.c  game_menu.py  main.c  menu.c  menu.h  micromachines.py  morpion.py  pacman.c  pacman.py  pacman2.py  puissance4.py  snake.c  snake.py  snake_c  solitaire.py  space_invaders.py  tetris.py
c_games/: CMakeLists.txt  README.md
c_games/include/common/: audio_manager.h  game_state.h  input_handler.h  sdl_framework.h  texture_manager.h  utils.h
c_games/include/games/: connect_four_game.h  snake_game.h  space_invaders_game.h  tetris_game.h  tic_tac_toe_game.h
c_games/src/: game_menu.c
c_games/src/common/: CMakeLists.txt  input_handler.c  sdl_framework.c
c_games/src/games/: CMakeLists.txt  connect_four.c  snake.c  space_invaders.c  tetris.c  tic_tac_toe.c
sprites/: README.md
